5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4125/executions/1593_2043.log
== TEST (2019-03-26 10:23:02) 
-- CODE:
a1 = float(input("digite um valor: "))
a2 = float(input("digite um valor: "))
a3 = float(input("digite um valor: "))
a4 = float(input("digite um valor: "))
a11 = a1*1
a22 = a2*2
a33 = a3*3
a44 = a4*4

x = (a11 + a22 + a33 + a44)/10
print(rpond(x, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    print(rpond(x, 2))
NameError: name 'rpond' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:23:16) 
-- CODE:
a1 = float(input("digite um valor: "))
a2 = float(input("digite um valor: "))
a3 = float(input("digite um valor: "))
a4 = float(input("digite um valor: "))
a11 = a1*1
a22 = a2*2
a33 = a3*3
a44 = a4*4

x = (a11 + a22 + a33 + a44)/10
print(round(x, 2))
-- OUTPUT:
8.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:23:27) 
-- CODE:
a1 = float(input("digite um valor: "))
a2 = float(input("digite um valor: "))
a3 = float(input("digite um valor: "))
a4 = float(input("digite um valor: "))
a11 = a1*1
a22 = a2*2
a33 = a3*3
a44 = a4*4

x = (a11 + a22 + a33 + a44)/10
print(round(x, 2))
-- OUTPUT:
8.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:23:31) 
-- CODE:
a1 = float(input("digite um valor: "))
a2 = float(input("digite um valor: "))
a3 = float(input("digite um valor: "))
a4 = float(input("digite um valor: "))
a11 = a1*1
a22 = a2*2
a33 = a3*3
a44 = a4*4

x = (a11 + a22 + a33 + a44)/10
print(round(x, 2))
-- EXECUTION TIME:
0.138136
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
8.2
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.94
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
